Sun Mar 30 09:12:16 2003  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/Connector.cpp (handle_timeout): Restructured the code so that
	  if the call to sh->handle_close() deletes the handlers, which in
 	  turn deletes the connector, the decr_ast_refcount() call won't
 	  cause a crash.  Thanks to Tomer Amiaz <Tomer@bandwiz.com> for
 	  reporting this bug and supplying a fix.

Sat Mar 29 16:34:56 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* THANKS: Added Bertin Colpron to the hall of fame.

Fri Mar 28 10:18:48 2003  Steve Huston  <shuston@riverace.com>

	* bin/PerlACE/Process_Win32.pm: For WinCE, when generating the
	  Pocket Controller script, put a 60-second sleep between running the
	  test and grabbing the log file. The script doesn't wait for the
	  program to exit before continuing. Will take this up with SOTI,
	  makers of Pocket Controller.

	* ace/Configuration.cpp (ACE_Configuration_Win32Registry::remove_section):
	  In the non-recursive case, try to delete the key; previously only
	  tried to delete the key if recursive.

	* tests/Config_Test.cpp: When reporting failed file import, list why
	  (%p), not the failed return status (-1). Also fixed many ACE_DEBUG
	  and ACE_ERROR strings by enclosing in ACE_TEXT.

	* tests/Conn_Test.cpp: When displaying a hostname, properly adjust
	  to the charset width in use.

	* tests/run_test.lst: Added !WinCE to Env_Value_Test. CE doesn't
	  do environment variables.

Thu Mar 27 14:20:32 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* THANKS: Added Jia Wan to the hall of fame.

Wed Mar 26 16:45:29 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* THANKS: Added Sebastien Lalonde to the hall of fame.

Wed Mar 26 16:48:31 2003  Steve Huston  <shuston@riverace.com>

	* ace/config-WinCE.h: Let ACE_HAS_WINSOCK2 be conditional on the CE
	  version; there was a #define ACE_HAS_WINSOCK2 at the end of the