@@ -1,3 +1,8 @@
+Sun Mar 30 21:46:54 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
+
+	* bin/topinfo_iorsize_stats.sh: Added data collection points for
+	  optimized cases.
+
 Sun Mar 30 09:12:16 2003  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>
 
 	* ace/Connector.cpp (handle_timeout): Restructured the code so that
